#34: Better error handling in case DomainName.of(...) throws an IllegalArgumentException in DomainController; we now return a proper Bad Request RDAPError response. Expanded the testing of Head requests.